# learn-rust

./: .gitignore  README.md
10-generics-traits-lifetimes/generic-data-type/: Cargo.toml
10-generics-traits-lifetimes/generic-data-type/src/: main.rs
10-generics-traits-lifetimes/lifetimes/src/: main.rs
10-generics-traits-lifetimes/src/: main.rs
10-generics-traits-lifetimes/traits/src/: lib.rs  main.rs
11-writing-tests/adder/src/: lib.rs
11-writing-tests/adder/tests/: integration_test.rs
13-functional-language-features/giveaway/: Cargo.toml
14-cargo-and-crates/: Cargo.toml
14-cargo-and-crates/src/: lib.rs
15-smart-pointers/multiple-ownership/: Cargo.toml
17-async-await/concurrency-with-async/: Cargo.toml
17-async-await/digging-into-traits-for-async/: Cargo.toml
2-guessing-game/: Cargo.toml
2-guessing-game/src/: main.rs
3-common-programming-concepts/fahrenheit-to-degree-celsius/: Cargo.toml
3-common-programming-concepts/src/: main.rs
3-common-programming-concepts/twelve-days-of-christmas-carol/: Cargo.toml
4-understanding-ownership/src/: main.rs
5-structs/src/: main.rs
6-enums-and-pattern-matching/: Cargo.toml
6-enums-and-pattern-matching/src/: main.rs
8-common-collections/employee-to-department/: Cargo.toml
8-common-collections/find-median-and-mode/: Cargo.toml
8-common-collections/strings-collection/: Cargo.toml
8-common-collections/strings-to-pig-latin/: Cargo.toml
9-error-handling/recoverable-errors/: Cargo.toml
9-error-handling/unrecoverable-errrors/: Cargo.toml
9-error-handling/unrecoverable-errrors/src/: main.rs
(+38 files in other folders)
